--- a/name.html
+++ b/name.html
@@ -4,8 +4,6 @@
 	<title></title>
 </head>
 <body>
-	Hello, I am Kishor.I am at Bhaisepati.
-
-	<a href="name.html">Name</a>
+ Name
 </body>
 </html>
